fixed facebook section touch scrolling on iOS etc

--- a/src/styles/_objects.tabs.scss
+++ b/src/styles/_objects.tabs.scss
@@ -143,6 +143,7 @@
     position: absolute;
     top: 517px;
     padding-left: 170px;
+    -webkit-overflow-scrolling: touch;
     overflow-y: scroll;
     overflow-x: hidden;
     height: 38%;
